# a2a-audit

./: .gitignore  ARCHITECTURE.md  README.md  SECURITY.md  a2a-audit-corpus.csv  a2a-audit-corpus.json  app.js  index.html  pyproject.toml  style.css
.github/workflows/: ci.yml
a2a_audit/: __init__.py  audit.py  backends.py  classifier.py  cli.py  context.py  fetch.py  finding.py  registry.py  report.py  schema.py  score.py  setup_models.py
a2a_audit/checks/: __init__.py  auth.py  exposure.py  signature.py  skills.py  transport.py  webhook.py
a2a_audit/rules/: injection_patterns.yaml
data/: aggregate.json  examples.json
demo/: app.js  index.html  style.css
demo/data/: pretested.json
redteam/: README.md  corpus.jsonl  eval.py  generate.py  results.json
scripts/: build_launch_docx.py  build_pretested.py  topup_pretested.py
tests/: conftest.py  test_backends.py  test_checks.py  test_classifier.py  test_cli.py  test_e2e_registry.py  test_fetch_ssrf.py  test_schema.py  test_score.py  test_setup_models.py  test_signature.py
tests/fixtures/: clean.json  injected-skill.json  over-exposed.json  plaintext-http.json  unsigned.json  v1-card.json
